--- a/killerapp/client/index.html
+++ b/killerapp/client/index.html
@@ -6,16 +6,14 @@
 </head>
 <body>
 <div ng-view></div>
-<script src="/socket.io/socket.io.js"></script>
+<script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
 <script>
-    var socket = io.connect();
+
+    var socket = io.connect('http://akortmann.indermache.net:8989');
     socket.on('hello', function(data) {
         console.log('Ohh '+data);
     });
 </script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
-<script src="js/app.js"></script>
-
 
 
 </body>
