--- a/killerapp/client/index.html
+++ b/killerapp/client/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE HTML>
-<html ng-app="App">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>KillerApp</title>
 </head>
 <body>
-<div ng-view></div>
-<script src="/socket.io/socket.io.js"></script>
+<script src="http://localhost:1337/socket.io/socket.io.js"></script>
 <script>
-    var socket = io.connect();
-    socket.on('hello', function(data) {
-        console.log('Ohh '+data);
-    });
+    var socket = io.connect('http://localhost:1337');
+//    socket.on('hello', function(data) {
+//        console.log('Ohh '+data);
+//    });
 </script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
-<script src="js/app.js"></script>
-
-
-
 </body>
 </html>
