--- a/killerapp/client/index.html
+++ b/killerapp/client/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div ng-view></div>
-<script src="http://localhost:1337/socket.io/socket.io.js"></script>
+<script src="http://akortmann.indermache.net:1337/socket.io/socket.io.js"></script>
 <script>
-    var socket = io.connect('http://localhost:1337');
+    var socket = io.connect('http://akortmann.indermache.net:1337');
 //    socket.on('hello', function(data) {
 //        console.log('Ohh '+data);
 //    });
